--- a/katie_dangelo_project4/styles/partials/_sectionThree.scss
+++ b/katie_dangelo_project4/styles/partials/_sectionThree.scss
@@ -3,23 +3,23 @@
 }
 
 .footer-stick-to-bottom--wrapper {
-    min-height: calc(100vh - 95px);
+    min-height: calc(100vh - 60px);
 }
 
 .section-three--background {
     background-image: linear-gradient(to right,rgba($primary-yellow, 0.8), rgba($primary-yellow, 0.8)), url('../images/background-party.png');
+    padding: 1px;
 }
 
 .section-three--specifics {
     display: flex;
     text-align: center;
     justify-content: space-around;
-    margin-bottom: 4vh;
 }
 
 .section--three-headers {
-    margin-top: 3vh;
-    margin-bottom: 3vh;
+    margin-top: 1vh;
+    margin-bottom: 2vh;
 }
 
 .section-three--background {
@@ -28,7 +28,7 @@
     }
     h1, h2 {
         margin-bottom: 0;
-        margin-top: 5px;
+        margin-top: 0.3vh
     }
     h1 {
         @include font-size-value(60);
@@ -43,7 +43,7 @@
     justify-content: flex-end;
      @include font-size-value(18);
     a {
-        margin-top: 35px;
+        margin-top: 3vh;
         transition: 0.3s;
     &:hover {
         color: $primary-green;
@@ -58,8 +58,8 @@ h4 {
 .section-three--boxes-for-results {
     min-height: 250px;
     padding: 15px;
-    margin-top: 2vh;
-    margin-bottom: 3vh;
+    margin-top: 0;
+    margin-bottom: 1vh;
 }
 
 .section-three--boxes-for-results-left {
@@ -139,7 +139,7 @@ h4 {
     background: $primary-green;
     color: $primary-color;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 1vh;
       &:hover {
         animation-duration: 0.4s; 
         animation-name: swing; 
@@ -158,15 +158,16 @@ h4 {
 
 .ending-header h3 {
     @include font-size-value(30);
-    margin-bottom: 30px;
+    margin-top: 0;
+    margin-bottom: 2vh;
 }
 
 footer {
     display: flex;
     justify-content: flex-start;
-    margin-bottom: 15px;
     p {
         display: inline-block;
+        margin: 0;
     }
     img {
         position: relative;
@@ -184,6 +185,9 @@ footer {
         h2 {
              @include font-size-value(20);
         }
+    }
+    .section-three--specifics {
+        max-width: 700px;
     }
 }
 
@@ -215,6 +219,11 @@ footer {
     .nyt-result, .lcbo-result {
         margin-top: 0;
         padding: 5px;
+    }
+    footer {
+        img {
+            width: 15%;
+        }
     }
 }
 
